<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.constraint.ConstraintLayout
        style="@style/AppTheme"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:fitsSystemWindows="true">

        <RadioGroup
        android:id="@+id/liner"
            android:layout_width="0dp"
        android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:padding="8dp"
        android:orientation="horizontal"
            android:textAlignment="center"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <RadioButton
                android:id="@+id/order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/myorder_selector"
                android:gravity="center"
                android:layout_gravity="bottom"
                android:text="我的"
                android:textAlignment="center"
                android:textColor="@color/secondary_text"
                android:textSize="10sp" />

            <RadioButton
                android:id="@+id/help"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/hand_selector"
                android:gravity="center"
                android:text="帮忙"
                android:textColor="@color/secondary_text"
                android:textSize="10sp" />

            <RadioButton
                android:id="@+id/community"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/community_selector"
                android:gravity="center"
                android:text="圈子"
                android:textColor="@color/secondary_text"
                android:textSize="10sp" />

            <RadioButton
                android:id="@+id/pulic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/love_selector"
                android:gravity="center"
                android:text="公益"
                android:textColor="@color/secondary_text"
                android:textSize="10sp" />
        </RadioGroup>

        <FrameLayout
            android:id="@+id/tab_separate"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:background="@color/primary_text"
            android:src="@color/primary_text"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/fragment"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:src="@drawable/add"
        app:backgroundTint="@color/colorAccent"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="@+id/fragment"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment"
        app:rippleColor="@color/colorAccent"
        app:srcCompat="@drawable/add"
        android:layout_marginBottom="3dp" />

        <FrameLayout
        android:id="@+id/fragment"
        android:name="com.upc.help_system.view.fragment.OrdersFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/backgroundGrey"
            app:layout_constraintBottom_toTopOf="@+id/liner"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </android.support.constraint.ConstraintLayout>
<android.support.design.widget.NavigationView
    android:id="@+id/navigation_view"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@drawable/startflash"
    app:headerLayout="@layout/navigation_header"

    app:menu="@menu/drawer" />
</android.support.v4.widget.DrawerLayout>